small change to test deployment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <option value="osc">Oscilator</option>
           <option value="del">Delay</option>
           <option value="gain">Gain</option>
-          <option value="filt">Filter</option>
+          <option value="filter">Filter</option>
         </select>
       </div>
     </div>
