unfinished attempt at adding bounds to console

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <option value="superfund sites">Superfund sites</option>
           <option value="pop density">Population Density</option>
         </select>
-        <select name="cars" id="cars">
+        <select name="synth_tools" id="synth_tools">
           <option value="osc">Oscilator</option>
           <option value="del">Delay</option>
           <option value="gain">Gain</option>
